--- a/README
+++ b/README
@@ -30,3 +30,7 @@ you'll need to get hold of Cachegrind, which is part of Valgrind
 There are some options you might want to tweak; search for nofib in
 ../mk/config.mk, and override settings in ../mk/build.mk as usual.
 
+Package Requirements:
+ * html
+ * regex-compat (mtl, regex-base, regex-posix)
+
