--- a/spectral/salishan/id.tex
+++ b/spectral/salishan/id.tex
@@ -903,7 +903,7 @@ $n=0$, there is only one such radical--- a lone hydrogen atom.  When
 $n>0$, we construct all canonical 3-partitions $(i,j,k)$ of $n-1$; for
 each such partition, we generate, recursively, all radicals {\cf ri}
 of size $i$, all radicals {\cf rj} of size $j$ and all radicals {\cf
-rk} of size $k$, and constuct the new radical \mbox{\cf (C ri rj rk)}.
+rk} of size $k$, and construct the new radical \mbox{\cf (C ri rj rk)}.
 Here is the function:
 
  \beginid
