nucleic2: removed unused files & simplify Makefile
Summary:
This commit does a few small cleanups:
- Remove the unused files (implementations in C, SML, etc.).
- Move the paper to a new `paper` subdirectory.
- Remove unnecessary things from the Makefile.

The last one will make it easier to move to a Shake-based build
system.

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: compile & run nofib

Reviewers: bgamari

Reviewed By: bgamari

Subscribers: dfeuer

Differential Revision: https://phabricator.haskell.org/D3041

--- a/spectral/hartel/nucleic2/README
+++ b/spectral/hartel/nucleic2/README
@@ -1,3 +1,13 @@
+UPDATE(2017.01)
+---------------
+
+To simplify the setup of the test, we have removed some of the unnecessary code
+(e.g., non-Haskell versions of the program). Please see:
+https://phabricator.haskell.org/D3041
+
+ORIGINAL README
+---------------
+
 This is the README file for the "nucleic2" benchmark program.
 
 The following files are contained in the tar file associated with
