--- a/spectral/mate/README
+++ b/spectral/mate/README
@@ -1,3 +1,14 @@
+UPDATE(2017.02)
+---------------
+
+Currently `make` will run the `holzhausen.prob` (specified in the `Makefile`),
+the output is simply copied to `mate.stdout`
+(`cp holzhausen.soln mate.stdout`).
+If you want to change the benchmark, you need to update both of these.
+
+ORIGINAL README
+---------------
+
 Mate solves chess end-game problems of the form "White to move
 and mate in N".  For example problems (standard input) and
 solutions (standard output) see *.in and *.out.
@@ -10,6 +21,6 @@ Here are approximate timings for some of the problems, when
 Mate is compiled to byte-code by nhc98 and run on a 700MHz PC
 (all times in seconds):
 
-ellerman      3    
+ellerman      3
 shinkman     70
-fridlizius  140   
+fridlizius  140
